                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 06-12-2005 changed: error messages related to nfo file reading for imdb url's
 - 06-12-2005 added: force index rebuilding to video osd.
 - 06-12-2005 fixed: [ 1372341 ] Using 'none' in PM3 freezes xbox after apx. half hour in non-English locales. Requires changing the vis off none, then back onto it to stop the freezing.
 - 06-12-2005 fixed: [ 1324302 ] XBMC hangs when skipping to next video in My Videos playlist.
 - 06-12-2005 fixed: Bug in GUIFont::GetTextExtent() which could cause filenames with characters that were not present in the font to crash.
 - 05-12-2005 fixed: playlists button in My Music Files
 - 05-12-2005 added: frame dropping in video decoder when using ffmpeg in dvdplayer
 - 05-12-2005 fixed: saving playlists
 - 04-12-2005 fixed: memory leaks in video renderers
 - 04-12-2005 added: critical section tracking for dlls (should fix some small memory leaks)
 - 04-12-2005 added: dvdplayer initial ff/rw support in dvdplayer. only available in debug builds. 
 - 04-12-2005 changed: cleanup of dvdplayer audio/video rendering with added support for dropping frames in decoder.
 - 04-12-2005 fixed: dvdplayer memory leak in libdvdnav
 - 04-12-2005 fixed: '/' is not allowed in passwords in samba shares
 - 04-12-2005 fixed: [ 1335817 ] Stacking isn't working when CD is autoplayed
 - 04-12-2005 fixed: [ 1371200 ] Video Info - cast - page up/down broken in 16x9.
 - 04-12-2005 fixed: [ 1295019 ] Wrong play/pause icon displayed in menu (videoOSD) during fast forward. - Check musicOSD's as well.
 - 04-12-2005 fixed: [ 1265343 ] Show FreeMem Display Not Visible in 1080i